--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./src/output.css" rel="stylesheet">
+    <link href="./output.css" rel="stylesheet">
     <title>Backups</title>
   </head>
   <body>
     <div id="root"></div>
     <div id="modal-root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/app/main.tsx"></script>
   </body>
 </html>
